small layout bugfix.

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -428,6 +428,11 @@ label {
     .social-icons{
         font-size: 20vw;
     }
+    .affix {
+        top:70px;
+        position:fixed;
+        width:350px;
+    }
 }
 
 @media screen and (min-width: 992px) and (max-width: 1199px) {
@@ -437,6 +442,7 @@ label {
     .affix {  
         margin-left: -20px;
         top:70px;
+        width:320px;
         position:fixed;
     }
 }
@@ -447,10 +453,7 @@ label {
     .showScrollUp{
         display:block !important;
     }
-    .affix {
-        top:70px;
-        position:fixed;
-    }
+
 
     .embedenceNoShift{
         margin-left:-40px; 
@@ -468,25 +471,38 @@ label {
     .affix {
         position: static;
     }
+    .twitter-icon {
+        margin-top: 0.05em;
+        color: rgba(105,167,249,1);
+        margin-left: 0.12em;
+    }
+
 }
 
 @media screen and (min-width: 1200px) {
     .social-icons {
-        font-size: 20vw;
+        font-size: 20em;
+    }
+
+    .affix {
+        top:70px;
+        position:fixed;
+        width:350px;
     }
 }
 
 .github-icon {
-    margin-top: 5vh;
+    margin-top: 0.05em;
     color: rgba(0,0,0,1);
+    margin-left: 0.1em;
 }
-
 .twitter-icon {
-    margin-top: 5vh;
+    margin-top: 0.05em;
     color: rgba(105,167,249,1);
 }
+
 .facebook-icon {
-    margin-left: 5vw;
+    margin-left: 0.23em;
     color: rgba(68,93,125,1);
 }
 .vk-icon {
@@ -506,15 +522,7 @@ label {
 }
 
 .bindButton {
-   margin-top:5px; 
-}
-
-.vote_hide {
-	display: none;
-}
-
-.notify_hide {
-	display: none;
+    margin-top:5px; 
 }
 
 span.tag-link {
